--- a/aws-auth-patch.yml
+++ b/aws-auth-patch.yml
@@ -4,12 +4,17 @@ data:
     - groups:
       - system:bootstrappers
       - system:nodes
-      rolearn: arn:aws:iam::956441097735:role/eksctl-eksctl-demo-nodegroup-ng-f-NodeInstanceRole-PQQZS1V7EIJ0
+      rolearn: arn:aws:iam::956441097735:role/eksctl-simple-jwt-api-nodegroup-n-NodeInstanceRole-1DEP0MMEYZ6X0
       username: system:node:{{EC2PrivateDNSName}}
+
+    - groups:
+      - system:masters
+      rolearn: arn:aws:iam::956441097735:role/UdacityFlaskDeployCBKubectlRole
+      username: build 
 kind: ConfigMap
 metadata:
-  creationTimestamp: "2022-08-03T15:25:38Z"
+  creationTimestamp: "2022-08-04T08:21:27Z"
   name: aws-auth
   namespace: kube-system
-  resourceVersion: "1538"
-  uid: 55a8a8de-b9f4-44a1-9bbe-c75b24bdc34b
+  resourceVersion: "1548"
+  uid: cbc67991-d22e-421f-aee9-e8cd726ee980
